multitenancy-benchmarks/require-namespace-quota/.chainsaw-test/good-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: good-testing-ns
spec: {}

---

apiVersion: v1
kind: ResourceQuota
metadata:
  name: good-resource-quota
  namespace: good-testing-ns
spec:
  hard:
    cpu: "4"
    memory: 8Gi
    ephemeral-storage: 10Gi
